--- a/frontend_angular/src/app/login/login.component.scss
+++ b/frontend_angular/src/app/login/login.component.scss
@@ -50,6 +50,7 @@ input {
     text-align: center;
     width: 40px;
     padding: 10px;
+    margin: 10px;
     border: 2px solid #ddd;
     border-radius: 4px;
     transition: border-color 0.3s;
