integrating text to speech api

--- a/frontend_angular/src/app/remedies/remedies.component.html
+++ b/frontend_angular/src/app/remedies/remedies.component.html
@@ -23,3 +23,8 @@
     </ng-container>
   </div>
 </div>
+<audio  #audioElement controls [src]="audio">
+ 
+</audio>
+
+<button (click)="resetAudio()">Reset</button>
