--- a/frontend_angular/src/app/app.component.html
+++ b/frontend_angular/src/app/app.component.html
@@ -25,7 +25,7 @@
   <div *ngIf="healthyPlant">
     <b> looks healthy but there is a possibility of getting below disease. </b>
   </div>
- <app-remedies [diseases]="diseases"></app-remedies>
+ <app-remedies [diseases]="diseases" [audio] ="audio"></app-remedies> 
  <div class="translate">
   <select (change)="changeLanguage($event)">
     <option [value]="lang.code" [selected]="lang.code=='en'" *ngFor="let lang of languages">{{lang.name}}</option>
