--- a/frontend_angular/src/app/remedies/remedies.component.html
+++ b/frontend_angular/src/app/remedies/remedies.component.html
@@ -1,23 +1,23 @@
-<b>Disease Details:</b><br>
+<b>{{'DiseaseDetails' | translate}}:</b><br>
   
 <div class="disease">
-  <b>Disease Name: </b>{{diseases.name}} <b> Probability : </b>{{diseases.probability}}<br>
-  <b>Description: </b>{{diseases.details?.description}}
+  <b>{{'DiseaseName' | translate}}: </b>{{diseases?.name}} <b> Probability : </b>{{diseases?.probability}}<br>
+  <b>{{'Description' | translate}}: </b>{{diseases.details?.description}}
 </div>
 <div class="remedies" *ngIf="diseases.details?.treatment">
-  <b>Remedies:</b>
+  <b>{{'Remedies' | translate}}</b>
   <br>
-  <div *ngIf="diseases.details.treatment?.biological"><b>Biological: </b><br>
+  <div *ngIf="diseases.details.treatment?.biological"><b>{{'Biological' | translate}}</b><br>
     <ng-container *ngFor="let biological of diseases.details.treatment.biological; index as i">
       {{(i+1) + '.' }}{{biological}}<br>
     </ng-container>
   </div>
-  <div *ngIf="diseases.details.treatment?.chemical"><b>Chemical: </b><br>
+  <div *ngIf="diseases.details.treatment?.chemical"><b>{{'Chemical' | translate}}</b><br>
     <ng-container *ngFor="let chemical of diseases.details.treatment.chemical; index as i">
       {{(i+1) + '.' }}{{chemical}}<br>
     </ng-container>
   </div>
-  <div *ngIf="diseases.details.treatment?.prevention"><b>Prevention: </b><br>
+  <div *ngIf="diseases.details.treatment?.prevention"><b>{{'Prevention' | translate}}</b><br>
     <ng-container *ngFor="let prevention of diseases.details.treatment.prevention; index as i">
       {{(i+1) + '.' }}{{prevention}}<br>
     </ng-container>
