--- a/frontend_angular/src/app/home/home.component.html
+++ b/frontend_angular/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <button class="btn btn-primary home-btn" (click)="openWebCam()">Take a Picture 📸</button><br>
-<button class="btn btn-primary home-btn">Upload </button>
+<button class="btn btn-primary home-btn" (click)="fileInput.click()">Upload </button>
+<input type="file" id="imageUpload" accept=".png, .jpg, .jpeg" #fileInput (change)="uploadFile($event)" style="display:none !important">
