--- a/frontend_angular/src/app/remedies/remedies.component.html
+++ b/frontend_angular/src/app/remedies/remedies.component.html
@@ -5,7 +5,7 @@
   <b>{{'Description' | translate}}: </b>{{diseases.details?.description}}
 </div>
 <div class="remedies" *ngIf="diseases.details?.treatment">
-  <b>{{'Remedies' | translate}}</b>
+  <b>{{healthyText | translate}}</b>
   <br>
   <div *ngIf="diseases.details.treatment?.biological"><b>{{'Biological' | translate}}</b><br>
     <ng-container *ngFor="let biological of diseases.details.treatment.biological; index as i">
