--- a/frontend_angular/src/app/modal/modal.component.html
+++ b/frontend_angular/src/app/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-background">
+<div class="modal-background" [ngClass]="loggedIn ? 'loggedIn':'loggedOut'">
     <div class="modal-content">
       <ng-template #modalContent></ng-template>
     </div>
