--- a/frontend_angular/src/app/app.component.scss
+++ b/frontend_angular/src/app/app.component.scss
@@ -31,6 +31,18 @@
   margin-right: 5%;
 }
 
+.modal-background {
+  position: fixed;
+  top: 0;
+  right: 10px;
+  width: 10%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
 .healthy-plant{
   padding: 10px;
   width: 90%;
