--- a/frontend_angular/src/app/modal/modal.component.scss
+++ b/frontend_angular/src/app/modal/modal.component.scss
@@ -1,9 +1,9 @@
 .modal-background {
     position: fixed;
-    top: 0;
+    
     left: 0;
     width: 100%;
-    height: 100%;
+   
     background-color: #eee;
     display: flex;
     justify-content: center;
@@ -17,3 +17,11 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   }
   
+  .loggedIn{
+    top:10%;
+    height:90%;
+  }
+  .loggedOut{
+    top:0;
+    height:100%;
+  }
