fixing style issue for image cropping

--- a/frontend_angular/src/app/crop/crop.component.scss
+++ b/frontend_angular/src/app/crop/crop.component.scss
@@ -1,4 +1,5 @@
-// .image-cropper{
-//     width: 50% !important;
-//     text-align: center;
-// }
+.image-cropper{
+    width: 50% !important;
+    text-align: center;
+   
+}
