--- a/frontend_angular/src/app/app.component.html
+++ b/frontend_angular/src/app/app.component.html
@@ -5,67 +5,57 @@
   <div>
     <i class="fa-solid fa-sign-out icon modal-background" (click)="logout()"></i>
 </div>
-<div style="height:90%">
-  <div *ngIf="!btnClicked">
+<div style="height:90%">  
+<div *ngIf="!btnClicked">
     <app-modal #homeModal></app-modal>
   </div>
-  
-  <div style="text-align: center" class="row" *ngIf="btnClicked">
+<div style="text-align:center;top:10%" class="row" *ngIf="btnClicked">
     <div *ngIf="!webcamImage">
-      <app-web-cam (image)="handleImage($event)"></app-web-cam>
+     <app-web-cam (image)="handleImage($event)"></app-web-cam>
     </div>
-    <div *ngIf="webcamImage" class="items-center">
-      <div class="image-container">
-        <div>
-          <app-crop
-            class="img"
-            [image]="webcamImage"
-            (cropped)="ImageCropped($event)"
-          ></app-crop>
-          <button class="btn btn-primary" (click)="cropped()">Check</button>
-        </div>
-          <div class="snapshot" *ngIf="webcamImage && isCroppedImage">
-            <img class="img" [src]="croppedImage" />
-            <br />
-            <br />
-            <div *ngIf="isPlant">
-              <button class="btn btn-primary" (click)="analyze()">Analyse</button>
-              <button class="btn btn-secondary" (click)="reset()">Reset</button>
-            </div>
-          </div>
+    <div *ngIf="webcamImage">
+      <app-crop [image]="webcamImage" (cropped)="ImageCropped($event)"></app-crop>
+      <button class="btn btn-primary" (click)="cropped()">Check</button>
+    </div>
+    <div class="snapshot" *ngIf="webcamImage && isCroppedImage">
+      <img [src]="croppedImage" />
+      <br />
+      <br />
+      <div *ngIf="isPlant">
+        <button class="btn btn-primary" (click)="analyze()">Analyse</button>
+        <button class="btn btn-secondary" (click)="reset()">Reset</button>
       </div>
-    </div>
-    
   </div>
-  <br />
-  <br />
-  <ng-container *ngIf="show">
-    <div class="translate">
-      <select
-        class="btn btn-primary"
-        (change)="changeLanguage($event)"
-        [(ngModel)]="selectedLanguage"
-      >
-        <option [value]="lang.code" *ngFor="let lang of languages">
-          {{ lang.name }}
-        </option>
-      </select>
-    </div>
-    <div class="healthy-plant">
-      <b>{{"HealthyLeafMsg"|translate}} {{probabilityValue}}</b>
-    </div>
-    <div class="healthy-plant" *ngIf="healthyPlant">
-      <b>
-        {{"SuggestionMsg" | translate}}
-      </b>
-    </div>
-    <div class="healthy-plant" *ngIf="!healthyPlant">
-      <b>
-        {{"UnhealthyMsg" | translate}}
-      </b>
-    </div>
-    <app-remedies [diseases]="diseases" [audio]="audio"  [healthy]="healthyPlant"></app-remedies>
-    
-  </ng-container>
+</div>
+<br />
+<br />
+<ng-container *ngIf="show">
+  <div class="translate">
+    <select
+      class="btn btn-primary"
+      (change)="changeLanguage($event)"
+      [(ngModel)]="selectedLanguage"
+    >
+      <option [value]="lang.code" *ngFor="let lang of languages">
+        {{ lang.name }}
+      </option>
+    </select>
   </div>
+  <div class="healthy-plant">
+    <b>{{"HealthyLeafMsg"|translate}} {{probabilityValue}}</b>
+  </div>
+  <div class="healthy-plant" *ngIf="healthyPlant">
+    <b>
+      {{"SuggestionMsg" | translate}}
+    </b>
+  </div>
+  <div class="healthy-plant" *ngIf="!healthyPlant">
+    <b>
+      {{"UnhealthyMsg" | translate}}
+    </b>
+  </div>
+  <app-remedies [diseases]="diseases" [audio]="audio"  [healthy]="healthyPlant"></app-remedies>
+  
+</ng-container>
+</div>
 </ng-container>
